# seshat

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.override.yml  docker-compose.yml  eval_gate.json  pyproject.toml
.claude/: claude-behavior.md  settings.json
.claude/skills/genai-review/: SKILL.md  tech-lead-prompt.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_relationship_surrogate_pk.py  002_rename_source_quote_to_quote_anchors.py  003_drop_chunk_index.py  004_add_ts_content_column.py  005_add_job_finished_at.py  006_api_keys_id_and_revoked_at.py  007_add_job_content_hash.py
data/eval/: README.md
docker/: .env.docker.example  Dockerfile  localstack-init.sh
docs/: architecture.md  configuration.md  eval-user-guide.md  primer.md  seshat-sdd.md  user-guide.md
scripts/: generate_synthetic_audio.py  run_api_local.py
src/seshat_ui/: api_client.py  utils.py
tests/: helpers.py
tests/integration/: _env.py  conftest.py  helpers.py
tests/unit/: conftest.py
thesis/: references.bib  seshat.tex
thesis/chapters/: 01-introduccion.tex  02-estado-del-arte.tex  03-requisitos-diseno.tex  04-implementacion.tex  05-evaluacion.tex  06-pruebas-validacion.tex  07-discusion.tex  08-conclusiones.tex  anexos-despliegue.tex  anexos-tecnico.tex  anexos.tex
thesis/figures/: architecture-diagram.html  er_diagram_kb.drawio  er_diagram_ops.drawio  export_diagram.py  identification_flow.drawio  job_lifecycle.drawio  kg_example.drawio  resolution_flow.drawio  retrieval_flow.drawio
(+500 files in other folders)
