[project]
name = "seshat"
version = "0.1.0"
description = "GenAI pipeline for structured meeting knowledge bases"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "radon>=6.0",
    "pre-commit>=3.7",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
ignore_missing_stubs = true

[tool.pytest.ini_options]
markers = ["integration: requires external services (LocalStack, Chroma, MLflow)"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
